# DECALS-ControlPanel

./: Cargo.toml  README.md
src/: colorscheme.rs  main.rs
src/DECALS_widgets/: mod.rs
src/color/: colors.rs  mod.rs
src/interface/: basic_controls_panel.rs  console.rs  container.rs  header_panel.rs  mod.rs  vertical_menu.rs
src/interface/color/: colors.rs  mod.rs
src/interface/components/: container.rs  mod.rs  vertical_menu.rs
src/interface/displays/: basic_controls_panel.rs  console.rs  full_image.rs  mod.rs
src/interface/panels/: basic_controls_panel.rs  console.rs  full_image.rs  mod.rs  settings_panel.rs
src/interface/widgets/: mod.rs
src/support/: mod.rs
