[package]
name = "DECALS-ControlPanel"
version = "0.1.0"
authors = ["Francesco Macagno <fjmacagno1@yahoo.com>", "Carly Robison <carlyellenrobison@gmail.com>"]

[dependencies]
DECALS-base = {git = "https://github.com/EnterpriseComputingSystems/DECALS-base"}
piston = "0.35.0"
piston2d-graphics = "0.24.0"
pistoncore-glutin_window = "0.43.0"
piston2d-opengl_graphics = "0.50.0"
